--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
   <body>
     <main id="main">
       <h1 id="title">Dr. A.P.J. Abdul Kalam</h1>
-      <div id="img-div">
+
+      <figure id="img-div">
         <img
           id="image"
           src="https://upload.wikimedia.org/wikipedia/commons/8/84/A_P_J_Abdul_Kalam.jpg"
           alt="Dr. A.P.J. Abdul Kalam smiling"
         />
-        <div id="img-caption">
+        <figcaption id="img-caption">
           Dr. Kalam — The Missile Man of India and former President who inspired millions with his vision and simplicity.
-        </div>
-      </div>
+        </figcaption>
+      </figure>
 
       <div id="tribute-info">
         <p>
