--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <figure id="img-div">
         <img
           id="image"
-          src="https://upload.wikimedia.org/wikipedia/commons/8/84/A_P_J_Abdul_Kalam.jpg"
+          src="images.jpeg"
           alt="Dr. A.P.J. Abdul Kalam smiling"
         />
         <figcaption id="img-caption">
