--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <figure id="img-div">
         <img
           id="image"
-          src="images.jpeg"
+          src="https://github.com/atharvaprojects/Tribute-Page/blob/main/images.jpeg"
           alt="Dr. A.P.J. Abdul Kalam smiling"
         />
         <figcaption id="img-caption">
